--- a/UI-submit-data.html
+++ b/UI-submit-data.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -35,7 +33,7 @@
     </head>
     <body>
         <!--<form id="fsubmit" method="post" action="javascript:;" onsubmit="checkinput();">-->
-        <form id="fsubmit" method="post" action="prepare-for-db.php">
+        <form id="fsubmit" method="post" action="<?php echo $PHP_SELF;?>">
             <h2> Συμπληρώστε τα παρακάτω πεδία και πατήστε "Υποβολή"</h2><br>
             <label for="numberofkids">Αριθμός παιδιών: </label>
             <input name="numberofkids" type="text" id="numberofkids" placeholder="παράδειγμα: 2" value="" required>*<br><br>
@@ -48,8 +46,4 @@
     </body>
 
 </html>
-<?php
-    session_name("mysession");
-    session_start();
-?>
 
